--- a/money.ipynb
+++ b/money.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "035cc830",
+   "execution_count": 1,
+   "id": "4f84ae58",
    "metadata": {
     "scrolled": false
    },
@@ -12,36 +12,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 0.08 3.5 14.90044\n",
-      "20 0.08 3.7 14.97041\n",
-      "20 0.08 3.9 15.02888\n",
-      "20 0.08 4.1 15.07641\n",
-      "20 0.08 4.3 15.11368\n",
-      "20 0.08 4.5 15.12896\n",
-      "20 0.08 4.7 15.08684\n",
-      "20 0.08 4.9 15.04878\n",
-      "20 0.08 5.1 15.01239\n",
-      "20 0.08 5.3 14.97647\n",
-      "20 0.08 5.5 14.91973\n",
-      "20 0.08 5.7 14.82664\n",
-      "20 0.08 5.9 14.74294\n",
-      "20 0.08 6.1 14.66664\n",
-      "20 0.08 6.3 14.56678\n",
-      "20 0.08 6.5 14.44797\n",
-      "20 0.08 6.7 14.34024\n",
-      "20 0.08 6.9 14.1988\n",
-      "20 0.08 7.1 14.06265\n",
-      "20 0.08 7.3 13.93751\n",
-      "20 0.08 7.5 13.82164\n",
-      "20 0.08 7.7 13.71359\n",
-      "20 0.08 7.9 13.61223\n",
-      "20 0.08 8.1 13.51663\n",
-      "20 0.08 8.3 13.42604\n",
-      "20 0.08 8.5 13.33983\n",
-      "20 0.08 8.7 13.25751\n",
-      "20 0.08 8.9 13.17863\n",
-      "20 0.08 9.1 13.10283\n",
-      "20 0.08 9.3 13.02981\n"
+      "20 0.01 6304210\n",
+      "20 0.02 5654947\n",
+      "20 0.04 5451260\n",
+      "20 0.06 5024972\n",
+      "20 0.08 5125267\n",
+      "20 0.1 5100836\n"
      ]
     }
    ],
@@ -56,7 +32,7 @@
     "blocks  = pd.read_excel(\"blocks.xlsx\" ,index_col=0)\n",
     "\n",
     "#Параметры нагревающей среды:\n",
-    "gas  = 'REFPROP::N2[0.78]&O2[0.1]&CO2[0.02]&H2O[0.1]' #Состав газа\n",
+    "gas  = 'REFPROP::N2[0.78]&O2[0.15]&CO2[0.02]&H2O[0.05]' #Состав газа\n",
     "Tin  = 183.6                                           #Температура газов на входе\n",
     "Pgas = 0.1                                             #Давление газов\n",
     "Ggas = 509                                             #Расход газов\n",
@@ -77,15 +53,15 @@
     "\n",
     "#Первое приближение\n",
     "\n",
-    "dTreg   = 20                #Минимальный напор в регенераторе\n",
-    "dPreg1  = 0.08                #Потери по горячему в МПа\n",
-    "dPreg2  = dPreg1                #Потери по холодному\n",
+    "dTreg   = 20\n",
     "Ppump   = 3.5                 #Давление на выходе из насоса\n",
     "\n",
-    "KPDold=0\n",
     "\n",
-    "for i in range(30):\n",
-    "    \n",
+    "\n",
+    "\n",
+    "dPreg1  = 0.01                #Потери по горячему в МПа\n",
+    "for i in range(1):\n",
+    "    dPreg2  = dPreg1                #Потери по холодному\n",
     "    streams = pd.read_excel(\"streams.xlsx\",index_col=0)\n",
     "    blocks  = pd.read_excel(\"blocks.xlsx\" ,index_col=0)\n",
     "\n",
@@ -113,20 +89,55 @@
     "        if abs(Qbalance) < 1:\n",
     "            break\n",
     "\n",
-    "    KPD = (blocks.loc['TURBINE','N']-blocks.loc['PUMP','N'])/blocks.loc['HEATER','Q']\n",
-    "    \n",
-    "#     if KPDold> KPD:\n",
-    "#         break\n",
+    "    money = regen.constr(\"TURB-REG\",  \"REG-COND\",  \"PUMP-REG\",\"REG-HEAT\",  dPreg1,dPreg1,streams, blocks)['money']\n",
     "        \n",
-    "    print(dTreg, dPreg1, round(Ppump,2), round(KPD*100,5))\n",
-    "    Ppump = Ppump + 0.2\n",
-    "    KPDold = KPD"
+    "    print(dTreg, dPreg1, money)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "dPreg1  = 0.02                #Потери по горячему в МПа\n",
+    "for i in range(5):\n",
+    "    dPreg2  = dPreg1                #Потери по холодному\n",
+    "\n",
+    "    streams = pd.read_excel(\"streams.xlsx\",index_col=0)\n",
+    "    blocks  = pd.read_excel(\"blocks.xlsx\" ,index_col=0)\n",
+    "\n",
+    "    #Внесение входных данных в таблицу:\n",
+    "    streams.loc[\"IN-HEAT\", \"T\":\"Q\"] = [Tin,Pgas,prop.t_p(Tin,Pgas,gas)[\"H\"],prop.t_p(Tin,Pgas,gas)[\"S\"],Ggas,1]\n",
+    "    streams.loc[\"IN-COND\", \"T\":\"Q\"] = [Tfluidcond,Pfluidcond,prop.t_p(Tfluidcond,Pfluidcond,fluidcond)[\"H\"],prop.t_p(Tfluidcond,Pfluidcond,fluidcond)[\"S\"],1000,0]\n",
+    "\n",
+    "    #Начало расчёта - задание расхода на первой итерации:\n",
+    "    G = Ggas*(prop.t_p(Tin,Pgas,gas)[\"H\"]-prop.t_p(Tout,Pgas,gas)[\"H\"])/(prop.t_p(Tin,Ppump,fluid)[\"H\"]-prop.t_p(Tout,Ppump,fluid)[\"H\"])\n",
+    "\n",
+    "    #Поток перед насосом:\n",
+    "    streams.loc[\"COND-PUMP\", \"T\":\"Q\"] = [prop.p_q(Pcond,0,fluid)[\"T\"],Pcond,prop.p_q(Pcond,0,fluid)['H'],prop.p_q(Pcond,0,fluid)['S'],G,0]\n",
+    "\n",
+    "    #Итеративный расчет для сведения баланса:\n",
+    "    for i in range(1000):\n",
+    "        #Расчет цикла:\n",
+    "        pump.calc     (\"COND-PUMP\", \"PUMP-REG\",                          Ppump,  KPDpump,     fluid, streams, blocks)\n",
+    "        regen.calc    (\"TURB-REG\",  \"REG-COND\",  \"PUMP-REG\",\"REG-HEAT\",  dTreg, dPreg1,dPreg2,fluid, streams, blocks)\n",
+    "        heater.calc   (\"IN-HEAT\",   \"HEAT-OUT\",  \"REG-HEAT\",\"HEAT-TURB\", Tout,   DTheat, gas, fluid, streams, blocks)\n",
+    "        turbine.calc  (\"HEAT-TURB\", \"TURB-REG\",                          Pcond+dPreg1,  KPDturb,fluid, streams, blocks)\n",
+    "        regen.calc    (\"TURB-REG\",  \"REG-COND\",  \"PUMP-REG\",\"REG-HEAT\",  dTreg, dPreg1,dPreg2,fluid, streams, blocks)\n",
+    "        condenser.calc(\"REG-COND\",  \"COND-PUMP\", \"IN-COND\" ,\"COND-OUT\",  DTcond, fluidcond,   fluid, streams, blocks)\n",
+    "        Qbalance = blocks.loc['HEATER','Q']+blocks.loc['PUMP','N']-blocks.loc['CONDENSER','Q']-blocks.loc['TURBINE','N']\n",
+    "#         print(Qbalance)\n",
+    "        if abs(Qbalance) < 1:\n",
+    "            break\n",
+    "\n",
+    "    money = regen.constr(\"TURB-REG\",  \"REG-COND\",  \"PUMP-REG\",\"REG-HEAT\",  dPreg1,dPreg1,streams, blocks)['money']\n",
+    "        \n",
+    "    print(dTreg, dPreg1, money)\n",
+    "    dPreg1 = dPreg1+0.02\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956d8af8",
+   "id": "daf72a28",
    "metadata": {},
    "outputs": [],
    "source": []
