--- a/money.ipynb
+++ b/money.ipynb
@@ -28,8 +28,8 @@
     "from modules import pump, regen, heater, turbine, condenser\n",
     "\n",
     "#Таблица с потоками и блоками:\n",
-    "streams = pd.read_excel(\"streams.xlsx\",index_col=0)\n",
-    "blocks  = pd.read_excel(\"blocks.xlsx\" ,index_col=0)\n",
+    "streams = pd.read_excel(\"data.xlsx\", sheet_name = \"streams\", index_col=0)\n",
+    "blocks  = pd.read_excel(\"data.xlsx\", sheet_name = \"blocks\",  index_col=0)\n",
     "\n",
     "#Параметры нагревающей среды:\n",
     "gas  = 'REFPROP::N2[0.78]&O2[0.15]&CO2[0.02]&H2O[0.05]' #Состав газа\n",
