--- a/Без регенератора.ipynb
+++ b/Без регенератора.ipynb
@@ -15,57 +15,57 @@
     }
    ],
    "source": [
-    "import prop\n",
+    "from modules import init, pump, regen, heater, turbine, condenser\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from modules import pump, regen, heater, turbine, condenser\n",
+    "import prop\n",
     "\n",
-    "#Таблица с потоками и блоками:\n",
+    "#Таблицы с потоками и блоками:\n",
     "streams = pd.read_excel(\"data.xlsx\", sheet_name = \"streams\", index_col=0)\n",
     "blocks  = pd.read_excel(\"data.xlsx\", sheet_name = \"blocks\",  index_col=0)\n",
     "\n",
     "#Параметры нагревающей среды:\n",
-    "gas  = 'REFPROP::N2[0.78]&O2[0.1]&CO2[0.02]&H2O[0.1]'\n",
+    "streams.loc[\"IN-HEAT\", \"G\"] = 509\n",
+    "gas  = \"REFPROP::N2[0.78]&O2[0.1]&CO2[0.02]&H2O[0.1]\"\n",
     "Tin  = 183.6\n",
     "Pgas = 0.1\n",
-    "Ggas = 509\n",
     "Tout = 80\n",
     "\n",
     "#Параметры охлаждающей среды:\n",
+    "streams.loc[\"IN-COND\", \"G\"] = 1000\n",
     "fluidcond  = \"REFPROP::WATER\"\n",
     "Tfluidcond = 15\n",
     "Pfluidcond = 0.15\n",
     "\n",
     "#Параметры ОЦР:\n",
+    "streams.loc[\"COND-PUMP\", \"G\"] = 1000\n",
     "fluid   = \"REFPROP::R236ea\"\n",
     "KPDpump = 0.85\n",
     "KPDturb = 0.85\n",
     "DTheat  = 10\n",
     "DTcond  = 5\n",
-    "\n",
-    "Pcond   = prop.t_q(30,0,fluid)['P']\n",
+    "Pcond   = prop.t_q(30,0,fluid)[\"P\"]\n",
     "Ppump   = 3.3\n",
     "\n",
     "#Внесение входных данных в таблицу:\n",
-    "streams.loc[\"IN-HEAT\", \"T\":\"Q\"]   = [Tin,Pgas,prop.t_p(Tin,Pgas,gas)[\"H\"],prop.t_p(Tin,Pgas,gas)[\"S\"],Ggas,1]\n",
-    "streams.loc[\"IN-COND\", \"T\":\"Q\"]   = [Tfluidcond,Pfluidcond,prop.t_p(Tfluidcond,Pfluidcond,fluidcond)[\"H\"],prop.t_p(Tfluidcond,Pfluidcond,fluidcond)[\"S\"],1000,0]\n",
-    "streams.loc[\"COND-PUMP\", \"T\":\"Q\"] = [prop.p_q(Pcond,0,fluid)[\"T\"],Pcond,prop.p_q(Pcond,0,fluid)['H'],prop.p_q(Pcond,0,fluid)['S'],1000,0]\n",
+    "streams.loc[\"IN-HEAT\",   \"T\":\"Q\"] = list(prop.t_p(Tin,        Pgas,       gas)      .values())\n",
+    "streams.loc[\"IN-COND\",   \"T\":\"Q\"] = list(prop.t_p(Tfluidcond, Pfluidcond, fluidcond).values())\n",
+    "streams.loc[\"COND-PUMP\", \"T\":\"Q\"] = list(prop.p_q(Pcond,      0,          fluid)    .values())\n",
     "\n",
     "#Итеративный расчет для сведения баланса:\n",
-    "for i in range(100):\n",
-    "    pump.calc     (\"COND-PUMP\", \"PUMP-REG\",                          Ppump,  KPDpump,     fluid, streams, blocks)\n",
-    "    streams.loc   [\"REG-HEAT\",  \"T\":\"Q\"]   = streams.loc[\"PUMP-REG\", \"T\":\"Q\"]\n",
-    "    heater.calc   (\"IN-HEAT\",   \"HEAT-OUT\",  \"REG-HEAT\",\"HEAT-TURB\", Tout,   DTheat, gas, fluid, streams, blocks)\n",
-    "    turbine.calc  (\"HEAT-TURB\", \"TURB-REG\",                          Pcond,  KPDturb,     fluid, streams, blocks)\n",
-    "    streams.loc   [\"REG-COND\",  \"T\":\"Q\"]   = streams.loc[\"TURB-REG\", \"T\":\"Q\"]\n",
-    "    condenser.calc(\"REG-COND\",  \"COND-PUMP\", \"IN-COND\" ,\"COND-OUT\",  DTcond, fluidcond,   fluid, streams, blocks)\n",
+    "init(streams, blocks, fluid, gas, fluidcond)\n",
+    "for i in range(9999):\n",
     "    \n",
-    "    Qbalance = blocks.loc['HEATER','Q']+blocks.loc['PUMP','N']-blocks.loc['CONDENSER','Q']-blocks.loc['TURBINE','N']\n",
-    "    if abs(Qbalance) < 0.5:\n",
+    "    pump.calc     (\"COND-PUMP\", \"REG-HEAT\",                           Ppump, KPDpump)\n",
+    "    heater.calc   (\"IN-HEAT\",   \"HEAT-OUT\",  \"REG-HEAT\", \"HEAT-TURB\", Tout,  DTheat )\n",
+    "    turbine.calc  (\"HEAT-TURB\", \"REG-COND\",                           Pcond, KPDturb)\n",
+    "    condenser.calc(\"REG-COND\",  \"COND-PUMP\", \"IN-COND\",  \"COND-OUT\",         DTcond )\n",
+    "\n",
+    "    Qbalance = (blocks.loc[\"HEATER\",\"Q\"] + blocks.loc[\"PUMP\",\"N\"] - blocks.loc[\"CONDENSER\",\"Q\"] - blocks.loc[\"TURBINE\",\"N\"])/blocks.loc[\"HEATER\",\"Q\"]\n",
+    "    if abs(Qbalance) < 10**-5:\n",
     "        break\n",
     "\n",
-    "KPD = (blocks.loc['TURBINE','N']-blocks.loc['PUMP','N'])/blocks.loc['HEATER','Q'] \n",
-    "print('KPD:',round(KPD*100,5))"
+    "KPD = (blocks.loc[\"TURBINE\",\"N\"] - blocks.loc[\"PUMP\",\"N\"])/blocks.loc[\"HEATER\",\"Q\"]\n",
+    "print(\"KPD:\",round(KPD*100, 5))"
    ]
   },
   {
@@ -99,8 +99,8 @@
        "      <th>P</th>\n",
        "      <th>H</th>\n",
        "      <th>S</th>\n",
-       "      <th>G</th>\n",
        "      <th>Q</th>\n",
+       "      <th>G</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -110,8 +110,8 @@
        "      <td>0.100000</td>\n",
        "      <td>628.266954</td>\n",
        "      <td>7.349244</td>\n",
-       "      <td>509.000000</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>509.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HEAT-OUT</th>\n",
@@ -119,8 +119,8 @@
        "      <td>0.100000</td>\n",
        "      <td>515.655043</td>\n",
        "      <td>7.069707</td>\n",
-       "      <td>509.000000</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>509.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>COND-PUMP</th>\n",
@@ -128,17 +128,17 @@
        "      <td>0.244324</td>\n",
        "      <td>237.395788</td>\n",
        "      <td>1.129466</td>\n",
-       "      <td>234.935940</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>234.935940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PUMP-REG</th>\n",
-       "      <td>31.481898</td>\n",
-       "      <td>3.300000</td>\n",
-       "      <td>239.936592</td>\n",
-       "      <td>1.130717</td>\n",
-       "      <td>234.935940</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>REG-HEAT</th>\n",
@@ -146,8 +146,8 @@
        "      <td>3.300000</td>\n",
        "      <td>239.936592</td>\n",
        "      <td>1.130717</td>\n",
-       "      <td>234.935940</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>234.935940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HEAT-TURB</th>\n",
@@ -155,17 +155,17 @@
        "      <td>3.300000</td>\n",
        "      <td>483.915709</td>\n",
        "      <td>1.777164</td>\n",
-       "      <td>234.935940</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>234.935940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TURB-REG</th>\n",
-       "      <td>87.704828</td>\n",
-       "      <td>0.244324</td>\n",
-       "      <td>444.285894</td>\n",
-       "      <td>1.796742</td>\n",
-       "      <td>234.935940</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>REG-COND</th>\n",
@@ -173,8 +173,8 @@
        "      <td>0.244324</td>\n",
        "      <td>444.285894</td>\n",
        "      <td>1.796742</td>\n",
-       "      <td>234.935940</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>234.935940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>IN-COND</th>\n",
@@ -182,8 +182,8 @@
        "      <td>0.150000</td>\n",
        "      <td>63.123431</td>\n",
        "      <td>0.224441</td>\n",
-       "      <td>813.162737</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>813.162737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>COND-OUT</th>\n",
@@ -191,25 +191,25 @@
        "      <td>0.150000</td>\n",
        "      <td>122.897347</td>\n",
        "      <td>0.426903</td>\n",
-       "      <td>813.162737</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>813.162737</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    T         P           H         S           G    Q\n",
-       "IN-HEAT    183.600000  0.100000  628.266954  7.349244  509.000000  1.0\n",
-       "HEAT-OUT    80.000000  0.100000  515.655043  7.069707  509.000000  1.0\n",
-       "COND-PUMP   30.000000  0.244324  237.395788  1.129466  234.935940  0.0\n",
-       "PUMP-REG    31.481898  3.300000  239.936592  1.130717  234.935940  0.0\n",
-       "REG-HEAT    31.481898  3.300000  239.936592  1.130717  234.935940  0.0\n",
-       "HEAT-TURB  159.534706  3.300000  483.915709  1.777164  234.935940  1.0\n",
-       "TURB-REG    87.704828  0.244324  444.285894  1.796742  234.935940  1.0\n",
-       "REG-COND    87.704828  0.244324  444.285894  1.796742  234.935940  1.0\n",
-       "IN-COND     15.000000  0.150000   63.123431  0.224441  813.162737  0.0\n",
-       "COND-OUT    29.289539  0.150000  122.897347  0.426903  813.162737  0.0"
+       "                    T         P           H         S    Q           G\n",
+       "IN-HEAT    183.600000  0.100000  628.266954  7.349244  1.0  509.000000\n",
+       "HEAT-OUT    80.000000  0.100000  515.655043  7.069707  1.0  509.000000\n",
+       "COND-PUMP   30.000000  0.244324  237.395788  1.129466  0.0  234.935940\n",
+       "PUMP-REG          NaN       NaN         NaN       NaN  NaN         NaN\n",
+       "REG-HEAT    31.481898  3.300000  239.936592  1.130717  0.0  234.935940\n",
+       "HEAT-TURB  159.534706  3.300000  483.915709  1.777164  1.0  234.935940\n",
+       "TURB-REG          NaN       NaN         NaN       NaN  NaN         NaN\n",
+       "REG-COND    87.704828  0.244324  444.285894  1.796742  1.0  234.935940\n",
+       "IN-COND     15.000000  0.150000   63.123431  0.224441  0.0  813.162737\n",
+       "COND-OUT    29.289539  0.150000  122.897347  0.426903  0.0  813.162737"
       ]
      },
      "execution_count": 2,
@@ -241,11 +241,12 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(16,5))\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(16, 5))\n",
     "plt.subplot(1, 2, 1)\n",
-    "heater.TQ(\"IN-HEAT\",\"HEAT-OUT\",\"REG-HEAT\",\"HEAT-TURB\",gas,fluid,streams)\n",
+    "heater.TQ(\"IN-HEAT\", \"HEAT-OUT\", \"REG-HEAT\", \"HEAT-TURB\")\n",
     "plt.subplot(1, 2, 2)\n",
-    "condenser.TQ(\"REG-COND\",\"COND-PUMP\",\"IN-COND\",\"COND-OUT\",fluidcond,fluid,streams)\n",
+    "condenser.TQ(\"REG-COND\", \"COND-PUMP\", \"IN-COND\", \"COND-OUT\")\n",
     "plt.show()"
    ]
   }
