--- a/С регенератором.ipynb
+++ b/С регенератором.ipynb
@@ -9833,7 +9833,7 @@
        "    };\n",
        "  };\n",
        "})();\n",
-       "</script><svg id=\"ccecaddc-bf98-46a6-ab20-1177139a9b42\" class=\"learning-curve\"></svg><script>  window.setupLearningCurve({\"id\": \"ccecaddc-bf98-46a6-ab20-1177139a9b42\", \"width\": 600, \"height\": 290, \"lineConfig\": {\"line-1\": {\"name\": \"line-1\", \"color\": \"#1f77b4\"}}, \"facetConfig\": {\"plot\": {\"name\": \"plot\", \"limit\": [null, null]}}, \"xAxisConfig\": {\"name\": \"iteration\", \"limit\": [null, null]}});</script>"
+       "</script><svg id=\"2dfd939f-7711-41fb-bd53-1da8f1949651\" class=\"learning-curve\"></svg><script>  window.setupLearningCurve({\"id\": \"2dfd939f-7711-41fb-bd53-1da8f1949651\", \"width\": 600, \"height\": 290, \"lineConfig\": {\"line-1\": {\"name\": \"line-1\", \"color\": \"#1f77b4\"}}, \"facetConfig\": {\"plot\": {\"name\": \"plot\", \"limit\": [null, null]}}, \"xAxisConfig\": {\"name\": \"iteration\", \"limit\": [null, null]}});</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -9845,7 +9845,7 @@
     {
      "data": {
       "text/html": [
-       "<script>  window.appendLearningCurve([{\"x\": 0.0, \"y\": {\"plot\": {\"line-1\": 0.2307054444293977}}}, {\"x\": 1.0, \"y\": {\"plot\": {\"line-1\": -0.24984585659983846}}}, {\"x\": 2.0, \"y\": {\"plot\": {\"line-1\": 0.14125342689504197}}}, {\"x\": 3.0, \"y\": {\"plot\": {\"line-1\": -0.1335893390233243}}}, {\"x\": 4.0, \"y\": {\"plot\": {\"line-1\": 0.082565387485445}}}, {\"x\": 5.0, \"y\": {\"plot\": {\"line-1\": -0.06922417195947411}}}, {\"x\": 6.0, \"y\": {\"plot\": {\"line-1\": 0.04524502739912212}}}, {\"x\": 7.0, \"y\": {\"plot\": {\"line-1\": -0.034292053037778644}}}, {\"x\": 8.0, \"y\": {\"plot\": {\"line-1\": 0.022906310152464936}}}, {\"x\": 9.0, \"y\": {\"plot\": {\"line-1\": -0.016170395818069415}}}, {\"x\": 10.0, \"y\": {\"plot\": {\"line-1\": 0.010675796534607564}}}, {\"x\": 11.0, \"y\": {\"plot\": {\"line-1\": -0.007372365190343583}}}, {\"x\": 12.0, \"y\": {\"plot\": {\"line-1\": 0.00493852303876147}}}, {\"x\": 13.0, \"y\": {\"plot\": {\"line-1\": -0.003377240950401634}}}, {\"x\": 14.0, \"y\": {\"plot\": {\"line-1\": 0.0022774352236529347}}}, {\"x\": 15.0, \"y\": {\"plot\": {\"line-1\": -0.001550447133372739}}}, {\"x\": 16.0, \"y\": {\"plot\": {\"line-1\": 0.0010487472067402708}}}, {\"x\": 17.0, \"y\": {\"plot\": {\"line-1\": -0.0007124959673517444}}}, {\"x\": 18.0, \"y\": {\"plot\": {\"line-1\": 0.0004826213894939323}}}, {\"x\": 19.0, \"y\": {\"plot\": {\"line-1\": -0.00032756770352641515}}}, {\"x\": 20.0, \"y\": {\"plot\": {\"line-1\": 0.00022202449008402504}}}, {\"x\": 21.0, \"y\": {\"plot\": {\"line-1\": -0.00015062591481261763}}}, {\"x\": 22.0, \"y\": {\"plot\": {\"line-1\": 0.00010212515378186291}}}, {\"x\": 23.0, \"y\": {\"plot\": {\"line-1\": -6.927313840114056e-05}}}]);</script>"
+       "<script>  window.appendLearningCurve([{\"x\": 0.0, \"y\": {\"plot\": {\"line-1\": 0.2307054444293921}}}, {\"x\": 1.0, \"y\": {\"plot\": {\"line-1\": -0.2498458565998302}}}, {\"x\": 2.0, \"y\": {\"plot\": {\"line-1\": 0.14125342689504297}}}, {\"x\": 3.0, \"y\": {\"plot\": {\"line-1\": -0.1335893390233255}}}, {\"x\": 4.0, \"y\": {\"plot\": {\"line-1\": 0.08256538748544294}}}, {\"x\": 5.0, \"y\": {\"plot\": {\"line-1\": -0.06922417195947088}}}, {\"x\": 6.0, \"y\": {\"plot\": {\"line-1\": 0.045245027399126496}}}, {\"x\": 7.0, \"y\": {\"plot\": {\"line-1\": -0.034292053037778804}}}, {\"x\": 8.0, \"y\": {\"plot\": {\"line-1\": 0.022906310152464048}}}, {\"x\": 9.0, \"y\": {\"plot\": {\"line-1\": -0.0161703958180684}}}, {\"x\": 10.0, \"y\": {\"plot\": {\"line-1\": 0.010675796534607564}}}, {\"x\": 11.0, \"y\": {\"plot\": {\"line-1\": -0.007372365190348439}}}, {\"x\": 12.0, \"y\": {\"plot\": {\"line-1\": 0.004938523038774036}}}, {\"x\": 13.0, \"y\": {\"plot\": {\"line-1\": -0.0033772409504098846}}}, {\"x\": 14.0, \"y\": {\"plot\": {\"line-1\": 0.0022774352236595353}}}, {\"x\": 15.0, \"y\": {\"plot\": {\"line-1\": -0.0015504471333678837}}}, {\"x\": 16.0, \"y\": {\"plot\": {\"line-1\": 0.001048747206741413}}}, {\"x\": 17.0, \"y\": {\"plot\": {\"line-1\": -0.0007124959673518396}}}, {\"x\": 18.0, \"y\": {\"plot\": {\"line-1\": 0.000482621389493964}}}, {\"x\": 19.0, \"y\": {\"plot\": {\"line-1\": -0.0003275677035260978}}}, {\"x\": 20.0, \"y\": {\"plot\": {\"line-1\": 0.00022202449008431065}}}, {\"x\": 21.0, \"y\": {\"plot\": {\"line-1\": -0.00015062591481518808}}}, {\"x\": 22.0, \"y\": {\"plot\": {\"line-1\": 0.00010212515377611901}}}, {\"x\": 23.0, \"y\": {\"plot\": {\"line-1\": -6.927313840555163e-05}}}]);</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -9873,20 +9873,20 @@
     "\n",
     "#Параметры нагревающей среды:\n",
     "streams.loc[\"IN-HEAT\", \"G\"] = 509\n",
-    "gas  = \"REFPROP::N2[0.78]&O2[0.1]&CO2[0.02]&H2O[0.1]\"\n",
+    "gas  = \"N2;0.78;O2;0.1;CO2;0.02;H2O;0.1\"\n",
     "Tin  = 183.6\n",
     "Pgas = 0.1\n",
     "Tout = 80\n",
     "\n",
     "#Параметры охлаждающей среды:\n",
     "streams.loc[\"IN-COND\", \"G\"] = 1000\n",
-    "fluidcond  = \"REFPROP::WATER\"\n",
+    "fluidcond  = \"WATER\"\n",
     "Tfluidcond = 15\n",
     "Pfluidcond = 0.15\n",
     "\n",
     "#Параметры ОЦР:\n",
     "streams.loc[\"COND-PUMP\", \"G\"] = 1000\n",
-    "fluid   = \"REFPROP::R236ea\"\n",
+    "fluid   = \"R236ea\"\n",
     "KPDpump = 0.85\n",
     "KPDturb = 0.85\n",
     "DTheat  = 10\n",
