--- a/REGEN.ipynb
+++ b/REGEN.ipynb
@@ -9833,7 +9833,7 @@
        "    };\n",
        "  };\n",
        "})();\n",
-       "</script><svg id=\"2dfd939f-7711-41fb-bd53-1da8f1949651\" class=\"learning-curve\"></svg><script>  window.setupLearningCurve({\"id\": \"2dfd939f-7711-41fb-bd53-1da8f1949651\", \"width\": 600, \"height\": 290, \"lineConfig\": {\"line-1\": {\"name\": \"line-1\", \"color\": \"#1f77b4\"}}, \"facetConfig\": {\"plot\": {\"name\": \"plot\", \"limit\": [null, null]}}, \"xAxisConfig\": {\"name\": \"iteration\", \"limit\": [null, null]}});</script>"
+       "</script><svg id=\"395d43bb-5e99-43e6-8a7d-df9041560b33\" class=\"learning-curve\"></svg><script>  window.setupLearningCurve({\"id\": \"395d43bb-5e99-43e6-8a7d-df9041560b33\", \"width\": 600, \"height\": 290, \"lineConfig\": {\"line-1\": {\"name\": \"line-1\", \"color\": \"#1f77b4\"}}, \"facetConfig\": {\"plot\": {\"name\": \"plot\", \"limit\": [null, null]}}, \"xAxisConfig\": {\"name\": \"iteration\", \"limit\": [null, null]}});</script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -9868,8 +9868,8 @@
     "import prop\n",
     "\n",
     "#Таблицы с потоками и блоками:\n",
-    "streams = pd.read_excel(\"data.xlsx\", sheet_name = \"streams\", index_col=0)\n",
-    "blocks  = pd.read_excel(\"data.xlsx\", sheet_name = \"blocks\",  index_col=0)\n",
+    "streams = pd.read_excel(\"data.xlsx\", sheet_name = \"REGEN-streams\", index_col=0)\n",
+    "blocks  = pd.read_excel(\"data.xlsx\", sheet_name = \"REGEN-blocks\",  index_col=0)\n",
     "\n",
     "#Параметры нагревающей среды:\n",
     "streams.loc[\"IN-HEAT\", \"G\"] = 509\n",
